crates/macros/tests/pass/from_bytes/struct.rs
use macros::*;

#[derive(FromBytes, FixedLayout, ByteComplete)]
#[repr(C)]
struct Foo {
    a: u8,
}

fn main() {
    mem_markers::from_bytes::ensure::<Foo>();
}
