crates/macros/tests/fail/from_bytes/not_fixed_layout.rs
use macros::*;

#[derive(FromBytes, ByteComplete)]
#[repr(C)]
struct Foo {
    a: u8,
}

fn main() {}
